--- a/styles/index.css
+++ b/styles/index.css
@@ -4,14 +4,23 @@
 }
 
 body{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     box-sizing: border-box;
+}
+.header{
+    width: 100%;
 }
 .navbar{
     z-index: 1000;
     position: fixed;
     width: 100%;
+}
+.navbar-toggler{
+    border: none;
+}
+.navbar-toggler:focus{
+    outline:unset;
 }
 .logo{
     font-family:var(--logo-tipo);
@@ -28,24 +37,35 @@ body{
     color: #000 !important;
 }
 
-/* Carousel */
-.carousel{
+/* /////////////////////// Carousel */
+.carousel {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+/* .carousel_img-frente{
+    object-fit:contain;
+    object-position: bottom;
+} */
+
+/* .carousel{
     position: relative;
     height: 100vh;
     width: 100vw;
-}
+} */
 .carousel-inner{
     position: relative;
     height: 100%;
     width: 100%;
-}
+} 
 .carousel-item{
-    /* position: relative; */
+    position: relative;
     height: 100%;
     width: 100%;
     background: url('../img/01-frente.jpg');
     background-size: cover;
-    background-position: bottom;
+    background-position: center bottom;
 }
 .carousel-item:nth-child(2){
     background: url('../img/01-vista.jpg');
@@ -55,7 +75,7 @@ body{
     background-position: center;
 }
 .carousel-item:nth-child(3){
-    background: url('../img/lt10.jpg');
+    background: url('../img/lt10-dark.jpg');
     height: 100%;
     width: 100%;
     background-size: cover;
