--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,8 @@ body{
     height: 100vh;
     box-sizing: border-box;
 }
+
+/* /////////////////////// Navbar */
 .header{
     width: 100%;
 }
@@ -15,12 +17,21 @@ body{
     z-index: 1000;
     position: fixed;
     width: 100%;
+    height: 50px;
+    padding: 0;
+    /* margin-top: -1px; */
+    background: #ffffff78;
 }
+/* .navbar_container{
+    background: #fff;
+} */
 .navbar-toggler{
     border: none;
+    font-size: 1rem;
 }
 .navbar-toggler:focus{
-    outline:unset;
+    outline: none;
+    box-shadow: none;
 }
 .logo{
     font-family:var(--logo-tipo);
@@ -37,23 +48,13 @@ body{
     color: #000 !important;
 }
 
-/* /////////////////////// Carousel */
+/* ///////////////////////// Carousel */
 .carousel {
     position: relative;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
 }
-/* .carousel_img-frente{
-    object-fit:contain;
-    object-position: bottom;
-} */
-
-/* .carousel{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-} */
 .carousel-inner{
     position: relative;
     height: 100%;
@@ -63,21 +64,46 @@ body{
     position: relative;
     height: 100%;
     width: 100%;
+    background: #000;
+}
+.overlay-image0{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
     background: url('../img/01-frente.jpg');
     background-size: cover;
-    background-position: center bottom;
+    background-position: bottom;
+    opacity: 0.9;
 }
-.carousel-item:nth-child(2){
+.overlay-image1{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
     background: url('../img/01-vista.jpg');
-    height: 100%;
-    width: 100%;
     background-size: cover;
     background-position: center;
+    opacity: 0.9;
 }
-.carousel-item:nth-child(3){
+.overlay-image2{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
     background: url('../img/lt10-dark.jpg');
-    height: 100%;
-    width: 100%;
     background-size: cover;
     background-position: center;
+    opacity: 0.9;
+}
+
+
+
+/* =========================================== Media Queries ============================= */
+
+@media screen and (max-width: 555px){
+
 }
