--- a/styles/about.css
+++ b/styles/about.css
@@ -4,8 +4,8 @@
 }
 
 body{
-    width: 100%;
-    height: 100vh;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -48,7 +48,7 @@ body{
 /* ///////////////////////////// About */
 
 .about_container{
-    height: 100%;
+    height: 100vh;
 }
 .about_row{
     height: 100%;
@@ -106,9 +106,50 @@ body{
 }
 
 
+/* /////////////////////////// Copyright */
+.about_copy{
+    width: 100%;
+    margin: 0;
+}
+
+/* ////// Desktop none - Mobile block */
+.desktop{
+    display: block;
+}
+.mobile{
+    display: none;
+}
+
 /* ========================== Media Queries */
-@media screen and (max-width: 768px){
+@media screen and (max-width: 992px){
     .navbar{
         margin-top: -1px;
+    }
+    .navbar-toggler{
+        padding: 0;
+    }
+    .about_container{
+        height: auto;
+    }
+    .about_img{
+        margin: 2rem 0;
+        padding: 0;
+    }
+    .button_container{
+        margin: 1.5rem 0;
+        flex-direction: column;
+        align-items: center;
+    }
+    .button_container-text{
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+
+    /* ////// Desktop none - Mobile block */
+    .desktop{
+        display: none;
+    }
+    .mobile{
+        display: block;
     }
 }
