--- a/styles/press.css
+++ b/styles/press.css
@@ -58,6 +58,67 @@ body{
     font-weight: 400;
     color: #000 !important;
 }
+.text_sigueme-ig{
+    font-family: var(--montserrat) !important;
+    font-weight: 400 !important;
+}
+
+/* ==================  Gallery Press */
+.gallery_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
+}
+.image_container{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    margin-bottom: 2rem;
+}
+.image_img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+.image_overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: #000;
+    font-family: var(--montserrat);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+.image_overlay-solid{
+    background: #fff;
+}
+.image_overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
+.image_overlay:hover{
+    opacity: 1;
+}
+.image_overlay:hover > *{
+    transform: translateY(0);
+}
+.image_title{
+    font-size: 1.5em;
+    font-weight: 400;
+}
+
+
+
+
 
 
 
@@ -75,5 +136,8 @@ body{
 
     .logo_icon {
         width: 140px;
+    }
+    .gallery_container{
+        margin-top: 2rem;
     }
 }
