--- a/styles/proyect.css
+++ b/styles/proyect.css
@@ -74,118 +74,52 @@ body{
     gap: 20px;
 }
 
-.gallery_img1, .gallery_img2, .gallery_img3, .gallery_img4{
-    overflow: hidden;
-}
-.pic{
+.image_container{
     position: relative;
-    height: 250px;
-    box-shadow: 2px 2px 4px lightgray;
-    cursor: pointer;
-    border-radius: 2px;
-}
-.img{
     width: 100%;
-    height: 100%;
+    height: 300px;
+    overflow: hidden;
+    cursor: pointer;
+    border: 2px;
+
+}
+.image_img{
+    display: block;
+    width: 100%;
+    /* height: 300px; */
     object-fit: cover;
     object-position: center;
 }
-.gallery_img1{
-    grid-area: gallery1;
-}
-.gallery_img2{
-    grid-area: gallery2;
-}
-.gallery_img3{
-    grid-area: gallery3;
-}
-.gallery_img4{
-    grid-area: gallery4;
-}
-
-/*  //////////////// image before */
-.gallery_img1::before{
-    content: "Vivienda Lt10";
+.image_overlay{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-10%, -50%);
-    color: #fff;
-    font-size: 22px;
-    font-weight: bold;
-    width: 100%;
-    margin-top: -100px;
-    opacity: 0;
-    transition: .3s;
-    transition-delay: .2s;
-    z-index: 1;
-}
-.gallery_img2::before{
-    content: "Vivienda MM";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-12%, -50%);
-    color: #fff;
-    font-size: 22px;
-    font-weight: bold;
-    width: 100%;
-    margin-top: -100px;
-    opacity: 0;
-    transition: .3s;
-    transition-delay: .2s;
-    z-index: 1;
-}
-.gallery_img3::before{
-    content: "Vivienda SG";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-10%, -50%);
-    color: #fff;
-    font-size: 22px;
-    font-weight: bold;
-    width: 100%;
-    margin-top: -100px;
-    opacity: 0;
-    transition: .3s;
-    transition-delay: .2s;
-    z-index: 1;
-}
-.gallery_img4::before{
-    content: "Hotel Wyndham";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-10%, -50%);
-    color: #fff;
-    font-size: 22px;
-    font-weight: bold;
-    width: 100%;
-    margin-top: -100px;
-    opacity: 0;
-    transition: .3s;
-    transition-delay: .2s;
-    z-index: 1;
-}
-
-/*  //////////////// image after */
-.pic::after{
-    content: "";
-    position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
-    height: 0;
-    background-color: rgba(0, 0, 0, .4);
-    transition: .3s;
-}
-.pic:hover:after{
     height: 100%;
+    color: #000;
+    font-family: var(--montserrat);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.25s;
 }
-.pic:hover:before{
-    margin-top: 0;
+.image_overlay-solid{
+    background: #fff;
+}
+.image_overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
+.image_overlay:hover{
     opacity: 1;
+}
+.image_overlay:hover > *{
+    transform: translateY(0);
+}
+.image_title{
+    font-size: 1.5em;
+    font-weight: 400;
 }
 
 
@@ -218,8 +152,6 @@ body{
     }
 }
 @media screen and (max-width: 320px){
-    .gallery_img1::before, .gallery_img2::before,.gallery_img3::before, .gallery_img4::before{
-        transform: translate(-25%, -50%);
-    }
+
 }
 
