agregue font family y size al footer

--- a/styles/about.css
+++ b/styles/about.css
@@ -105,10 +105,7 @@ body{
     font-size: 1em;
     font-size: 2em;
 }
-.about_copy-text{
-    letter-spacing: 2px;
-    font-size: 0.8em;
-}
+
 
 
 /* /////////////////////////// Copyright */
@@ -124,6 +121,16 @@ body{
 .mobile{
     display: none;
 }
+
+
+/* ========== Footer */
+.about_copy-text{
+    font-family: var(--montserrat);
+    font-weight: 500;
+    font-size: 1em;
+}
+
+
 
 /* ========================== Media Queries */
 @media screen and (max-width: 992px){
@@ -164,4 +171,9 @@ body{
     }
 
 
+}
+@media screen and (max-width: 500px){
+    .about_copy-text{
+        font-size: .8em;
+    }
 }
