--- a/styles/proyect.css
+++ b/styles/proyect.css
@@ -123,6 +123,14 @@ body{
 }
 
 
+/* ========== Footer */
+.about_copy-text{
+    font-family: var(--montserrat);
+    font-weight: 500;
+    font-size: 1em;
+}
+
+
 
 /* ========================== Media Queries */
 @media screen and (max-width: 992px){
@@ -151,7 +159,9 @@ body{
         ;
     }
 }
-@media screen and (max-width: 320px){
-
+@media screen and (max-width: 500px){
+    .about_copy-text{
+        font-size: .8em;
+    }
 }
 
