--- a/styles/proyect.css
+++ b/styles/proyect.css
@@ -61,7 +61,7 @@ body{
 
 
 /* //////////////////////  Gallery */
-.gallery_container{
+/* .gallery_container{
     margin: 2rem 0;
     width: 100%;
     display: grid;
@@ -72,21 +72,31 @@ body{
     "gallery3 gallery4"
     ;
     gap: 20px;
+} */
+.gallery_container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 4rem 0 3rem;
 }
 
 .image_container{
     position: relative;
-    width: 100%;
+    width: 45%;
     height: 300px;
     overflow: hidden;
     cursor: pointer;
     border: 2px;
+    margin: 2rem 0;
 
 }
 .image_img{
     display: block;
     width: 100%;
-    /* height: 300px; */
+    height: 300px;
     object-fit: cover;
     object-position: center;
 }
@@ -145,10 +155,17 @@ body{
     .logo_icon {
         width: 140px;
     }
+    .gallery_container{
+        flex-direction: column;
+        margin-top: 2rem;
+    }
+    .image_container{
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 768px){
-    .gallery_container{
+    /* .gallery_container{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, 1fr);
         grid-template-areas: 
@@ -157,9 +174,12 @@ body{
         "gallery3"
         "gallery4"
         ;
-    }
+    } */
 }
 @media screen and (max-width: 500px){
+    .gallery_container{
+        margin: 2rem 0 0;
+    }
     .about_copy-text{
         font-size: .8em;
     }
