carousel mobile con imagenes distintas. Menu home responsive background. Detalle de color en mobile about title

--- a/styles/about.css
+++ b/styles/about.css
@@ -156,6 +156,9 @@ body{
     .about_container{
         height: auto;
     }
+    .about_title{
+        color: red;
+    }
     .about_img{
         margin: 2rem 0;
         padding: 0;
