--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,12 @@ body{
 .mobile{
     display: none;
 }
+.nav-desktop{
+    display: block;
+}
+.nav-mobile{
+    display: none !important;
+}
 
 
 
@@ -103,7 +109,7 @@ body{
     top: 0;
     background: url('../img/carousel/1.jpg');
     background-size: cover;
-    background-position: bottom;
+    background-position: center;
     opacity: 0.9;
 }
 .overlay-image1{
@@ -139,7 +145,7 @@ body{
     background-position: center;
     opacity: 0.9;
 }
-.overlay-image4{ 
+/* .overlay-image4{ 
     position: absolute;
     bottom: 0;
     left: 0;
@@ -149,7 +155,7 @@ body{
     background-size: cover;
     background-position: center;
     opacity: 0.9;
-}
+} */
 .overlay-image5{ 
     position: absolute;
     bottom: 0;
@@ -167,12 +173,12 @@ body{
     left: 0;
     right: 0;
     top: 0;
-    background: url('../img/carousel/7.jpg');
+    background: url('../img/carousel/6b.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: bottom;
     opacity: 0.9;
 }
-.overlay-image7{ 
+/* .overlay-image7{ 
     position: absolute;
     bottom: 0;
     left: 0;
@@ -215,7 +221,9 @@ body{
     background-size: cover;
     background-position: center;
     opacity: 0.9;
-}
+} */
+
+
 
 /* =================== Carousel home Mobile */
 .overlay-image0-mobile{
@@ -226,7 +234,7 @@ body{
     top: 0;
     background: url('../img/carousel/mobile/4.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: left center;
     opacity: 0.9;
 }
 .overlay-image1-mobile{
@@ -292,7 +300,7 @@ body{
     top: 0;
     background: url('../img/carousel/mobile/14.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: center top;
     opacity: 0.9;
 }
 .overlay-image7-mobile{
@@ -325,18 +333,19 @@ body{
 
 @media screen and (max-width: 992px){
 
-    /* ////// Desktop none - Mobile block */
-    /* .desktop{
-        display: none;
+    /* ////// nav none - navMobile block */
+    .nav-desktop{
+        display: none !important;
     }
-    .mobile{
-        display: block;
-    } */
+    .nav-mobile{
+        display: block !important;
+    }
+
     .navbar_container{
         padding: 0;
     }
     .navbar-collapse{
-        margin-top: 15px;
+        margin-top: 13px;
         background: #ffffff78;
     }
     .logo{
