--- a/styles/about.css
+++ b/styles/about.css
@@ -9,6 +9,18 @@ body{
     box-sizing: border-box;
 }
 
+
+/* ////// Desktop none - Mobile block */
+.desktop{
+    display: block;
+}
+.mobile{
+    display: none;
+}
+
+
+
+
 /* /////////////////////// Navbar */
 .header{
     width: 100%;
@@ -108,22 +120,12 @@ body{
 
 
 
-/* /////////////////////////// Copyright */
+/* /////////////////////////// Footer */
 .about_copy{
     width: 100%;
     margin: 0;
 }
 
-/* ////// Desktop none - Mobile block */
-.desktop{
-    display: block;
-}
-.mobile{
-    display: none;
-}
-
-
-/* ========== Footer */
 .about_copy-text{
     font-family: var(--montserrat);
     font-weight: 500;
@@ -132,7 +134,12 @@ body{
 
 
 
-/* ========================== Media Queries */
+
+
+
+
+
+/* =================================================== Media Queries */
 @media screen and (max-width: 992px){
 
     /* ////// Desktop none - Mobile block */
