creación de ficha y galería de viviendas MM - SG - hotel wyndham

--- a/Proyectos/styles/viviendas.css
+++ b/Proyectos/styles/viviendas.css
@@ -103,6 +103,8 @@ body{
 /* ========================== Galery Vivienda LT10 */
 .col_gallery{
     transition: .5s ease-in-out;
+    display: flex;
+    align-items: center;
 }
 .col_gallery:hover{
     filter: brightness(80%);
