correcciones varias en detalles tipograficos. Y correccion en proyectos vivienda LT10 como prueba

--- a/styles/press.css
+++ b/styles/press.css
@@ -73,8 +73,8 @@ body{
 }
 .image_container{
     position: relative;
-    width: 400px;
-    height: 400px;
+    /* width: 400px;
+    height: 400px; */
     margin-bottom: 2rem;
     cursor: pointer;
 }
@@ -147,6 +147,13 @@ body{
         margin-top: 2rem;
     }
 }
+
+@media only screen and (max-width: 768px){
+    .clarinArq{
+        margin-bottom: 2.2rem;
+    }
+}
+
 @media screen and (max-width: 500px){
     .gallery_container{
         margin: 2rem 0 0;
