--- a/Proyectos/styles/viviendas.css
+++ b/Proyectos/styles/viviendas.css
@@ -103,9 +103,9 @@ body{
 /* ========================== Galery Vivienda LT10 */
 .col_gallery{
     transition: .5s ease-in-out;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    padding: 0 5px;
+    padding: 0 5px; */
     margin-bottom: 10px;
 }
 .col_gallery:hover{
@@ -134,9 +134,9 @@ body{
     color: #fff;
 }
 .img_gallery{
-    height: 300px;
+    height: auto;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 
