--- a/Proyectos/styles/viviendas.css
+++ b/Proyectos/styles/viviendas.css
@@ -23,6 +23,12 @@ body{
 .header{
     width: 100%;
 }
+.navbar_container{
+    background: #fff;
+    box-shadow: 0px 3px 7px 0px rgb(198 198 198 / 75%);
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+    -moz-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+}
 .navbar{
     z-index: 1000;
     position: sticky;
