--- a/styles/about.css
+++ b/styles/about.css
@@ -28,11 +28,16 @@ body{
 .navbar{
     z-index: 1000;
     width: 100%;
-    height: 50px;
+    height: 100%;
     padding: 0;
 }
 .navbar_container{
+    padding-top: 5px;
+    padding-bottom: 5px;
     background: #fff;
+    box-shadow: 0px 3px 7px 0px rgb(198 198 198 / 75%);
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+    -moz-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
 }
 .navbar-toggler{
     border: none;
@@ -162,9 +167,6 @@ body{
     }
     .about_container{
         height: auto;
-    }
-    .about_title{
-        color: red;
     }
     .about_img{
         margin: 2rem 0;
