--- a/Proyectos/styles/viviendas.css
+++ b/Proyectos/styles/viviendas.css
@@ -36,7 +36,7 @@ body{
     right: 0;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 100%;
     padding: 0;
     background: #ffffff78;
 }
@@ -88,7 +88,7 @@ body{
 /* ===========================  Ficha técnica */
 
 .container_lt{
-    margin-top: 3rem;
+    margin-top: 6rem;
 }
 .ficha_title{
     font-family: var(--montserrat);
@@ -183,6 +183,12 @@ body{
 
 
 /* =================================================== Media Queries */
+@media only screen and (min-width: 768px){
+    .navbar_container{
+        padding: 0 3rem;
+    }
+}
+
 @media only screen and (max-width: 992px){
 
     /* ////// Desktop none - Mobile block */
@@ -192,6 +198,13 @@ body{
     .mobile{
         display: block;
     }
+
+    .navbar_container{
+        box-shadow: 0px 3px 7px 0px rgb(198 198 198 / 75%);
+        -webkit-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+        -moz-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+    }
+
     .img_gallery{
         height: 100%;
     }
