--- a/styles/proyect.css
+++ b/styles/proyect.css
@@ -78,6 +78,9 @@ body{
     ;
     gap: 20px;
 } */
+.container_proyect{
+    margin-top: 5rem;
+}
 .gallery_container{
     width: 100%;
     display: flex;
@@ -148,6 +151,11 @@ body{
 
 
 /* ========================== Media Queries */
+@media only screen and (min-width: 768px){
+    .navbar_container{
+        padding: 0 3rem;
+    }
+}
 @media screen and (max-width: 992px){
 
     /* ////// Desktop none - Mobile block */
@@ -159,6 +167,12 @@ body{
     }
     .logo_icon {
         width: 140px;
+    }
+
+    .navbar_container{
+        box-shadow: 0px 3px 7px 0px rgb(198 198 198 / 75%);
+        -webkit-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+        -moz-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
     }
     .gallery_container{
         flex-direction: column;
