--- a/Press/galleryPress.css
+++ b/Press/galleryPress.css
@@ -34,6 +34,14 @@ body{
     padding: 0;
     background: #ffffff78;
 }
+.navbar_container{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background: #fff;
+    box-shadow: 0px 3px 7px 0px rgb(198 198 198 / 75%);
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+    -moz-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
+}
 .navbar-toggler{
     border: none;
     font-size: 1rem;
@@ -105,7 +113,7 @@ body{
     transition: .5s ease-in-out;
     display: flex;
     align-items: center;
-    padding: 0 5px;
+    justify-content: center;
     margin-bottom: 10px;
 }
 .col_gallery:hover{
@@ -171,6 +179,11 @@ body{
 
 
 /* =================================================== Media Queries */
+@media only screen and (min-width: 768px){
+    .navbar_container{
+        padding: 0 3rem;
+    }
+}
 @media only screen and (max-width: 992px){
 
     /* ////// Desktop none - Mobile block */
