--- a/styles/about.css
+++ b/styles/about.css
@@ -58,13 +58,24 @@ body{
      width: 200px;
      height: auto;
  }
+ .navbar-nav{
+     position: relative;
+ }
 .nav-item{
     margin-left: 10px;
+    position: relative;
 }
+
 .nav-link{
     font-family: var(--montserrat);
     font-weight: 400;
     color: #000 !important;
+}
+.nav-link:hover{
+    font-weight: 500;
+}
+.active{
+    font-weight: 500;
 }
 
 /* ///////////////////////////// About */
