--- a/styles/index.css
+++ b/styles/index.css
@@ -58,6 +58,12 @@ body{
     font-weight: 400;
     color: #000 !important;
 }
+.nav-link:hover{
+    font-weight: 500;
+}
+.active{
+    font-weight: 500;
+}
 .dropdown-menu{
     background: #fff;
     margin-top: 4px;
