--- a/styles/press.css
+++ b/styles/press.css
@@ -69,6 +69,12 @@ body{
     font-weight: 400 !important;
 }
 
+.nav-link:hover{
+    font-weight: 500;
+}
+.active{
+    font-weight: 500;
+}
 
 /* ==================  Gallery Press */
 .container_section{
