--- a/styles/proyect.css
+++ b/styles/proyect.css
@@ -63,7 +63,12 @@ body{
     font-weight: 400;
     color: #000 !important;
 }
-
+.nav-link:hover{
+    font-weight: 500;
+}
+.active{
+    font-weight: 500;
+}
 
 /* //////////////////////  Gallery */
 /* .gallery_container{
