--- a/Press/galleryPress.css
+++ b/Press/galleryPress.css
@@ -4,8 +4,8 @@
 }
 
 body{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
 }
 
@@ -77,8 +77,6 @@ body{
 .active{
     font-weight: 500;
 }
-
-
 .dropdown-menu{
     background: #fff;
     margin-top: 4px;
@@ -98,6 +96,9 @@ body{
 
 
 /* ===========================  Ficha técnica */
+.container, .container-md, .container-sm {
+    max-width: 100%;
+}
 
 .container_lt{
     margin-top: 3rem;
@@ -160,17 +161,7 @@ body{
 
 
 
-
-
-
-
-
-
-
 /* /////////////////////////// Footer */
-/* .footer{
-    margin-top: 4rem;
-} */
 .about_copy{
     width: 100%;
     margin: 0;
@@ -181,9 +172,6 @@ body{
     font-weight: 500;
     font-size: 1em;
 }
-
-
-
 
 
 
