--- a/styles/press.css
+++ b/styles/press.css
@@ -132,11 +132,41 @@ body{
     font-weight: 400;
 }
 
-/* ========== Footer */
+/* /////////////////////////// Footer */
 .about_copy-text{
     font-family: var(--montserrat);
     font-weight: 500;
-    font-size: 1em;
+    font-size: .8em;
+    line-height: 1.6em;
+    letter-spacing: .2em;
+    text-transform: uppercase;
+    color: #333;
+}
+/*  copy blue producciones */
+.blue_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-top: 20px;
+}
+.blue_container a{
+text-decoration: none;
+}
+.blue_text{
+    background: #F3F1F5;
+    color: #7F7C82;
+    padding: 5px 10px;
+    border-radius: 10px 10px 0 0;
+    font-weight: 600;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.13),
+    -5px -5px 5px 0px rgba(255, 255, 255, 0.68);
+    transition: all 0.2s ease-in-out ;
+    transition: all 0.2s ease-in-out ;
+}
+.blue_text:hover{
+    background: #091353;
+    color: #B2F9FC;
 }
 
 
@@ -170,6 +200,9 @@ body{
         -webkit-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
         -moz-box-shadow: 0px 3px 7px 0px rgba(198,198,198,0.75);
     }
+    .blue_text{
+        font-size: .7em;
+    }
 }
 
 @media only screen and (max-width: 768px){
@@ -183,6 +216,6 @@ body{
         margin: 2rem 0 0;
     }
     .about_copy-text{
-        font-size: .8em;
+        font-size: .6em;
     }
 }
