--- a/Proyectos/styles/viviendas.css
+++ b/Proyectos/styles/viviendas.css
@@ -97,12 +97,18 @@ body{
 /* ===========================  Ficha técnica */
 
 .container_lt{
-    margin-top: 6rem;
+    margin-top: 4rem;
+}
+.breadcrumb a{
+    text-decoration: none;
+    /* color: #333; */
+    font-weight: 500;
 }
 .ficha_title{
     font-family: var(--montserrat);
     font-size: 2em;
     font-weight: 400;
+    margin-top: 2rem;
 }
 .col_ficha p{
     font-family: var(--montserrat);
@@ -163,9 +169,28 @@ body{
 
 
 
+/* Scroll to top */
+.go-top {
+	position: fixed;
+	bottom: 2em;
+	right: 2em;
+	text-decoration: none;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.3);
+	font-size: 12px;
+	padding: 1em;
+	display: none;
+    margin: 0 auto;
+}
 
+.go-top:hover {
+	background-color: rgba(0, 0, 0, 0.6);
+    color: #F3F1F5;
+}
 
-
+.go-top i{
+    font-size: 2em;
+}
 
 
 
@@ -182,9 +207,39 @@ body{
 .about_copy-text{
     font-family: var(--montserrat);
     font-weight: 500;
-    font-size: 1em;
+    font-size: .8em;
+    line-height: 1.6em;
+    letter-spacing: .2em;
+    text-transform: uppercase;
+    color: #333;
 }
 
+/*  copy blue producciones */
+.blue_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-top: 20px;
+}
+.blue_container a{
+text-decoration: none;
+}
+.blue_text{
+    background: #F3F1F5;
+    color: #7F7C82;
+    padding: 5px 10px;
+    border-radius: 10px 10px 0 0;
+    font-weight: 600;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.13),
+    -5px -5px 5px 0px rgba(255, 255, 255, 0.68);
+    transition: all 0.2s ease-in-out ;
+    transition: all 0.2s ease-in-out ;
+}
+.blue_text:hover{
+    background: #091353;
+    color: #B2F9FC;
+}
 
 
 
@@ -217,6 +272,9 @@ body{
     .img_gallery{
         height: 100%;
     }
+    .blue_text{
+        font-size: .7em;
+    }
 }
 
 @media only screen and (max-width: 768px){
@@ -227,7 +285,7 @@ body{
 
 @media only screen and (max-width: 500px){
     .about_copy-text{
-        font-size: .8em;
+        font-size: .6em;
     }
 
 }
