--- a/styles/about.css
+++ b/styles/about.css
@@ -112,6 +112,7 @@ body{
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
+    align-items: center;
 }
 .enlace_button{
     text-decoration: none;
@@ -129,17 +130,37 @@ body{
     box-shadow: none;
 }
 .button_container-iconContainer{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
-}
-.button_container-icon{
-    color: #000;
-    font-size: 1em;
     font-size: 2em;
+    color: #000;
+    width: 60px;
+    height: 50px;
+    transition: 0.5s;
 }
-
+.button_container-iconContainer:hover{
+    color: #fff;
+}
+.button_container-iconContainer:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right:0;
+    bottom: 0;
+    background: #000;
+    border-radius:50%;
+    z-index: -1; 
+    transform: scale(0);
+    transition: 0.5s;
+}
+.button_container-iconContainer:hover:before{
+    transform: scale(1);
+    background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+}
 
 
 /* /////////////////////////// Footer */
@@ -243,3 +264,23 @@ text-decoration: none;
         font-size: .6em;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
