modificaciones en textos, seo y agregado de imagenes en inicio y casa LT10

--- a/Proyectos/styles/viviendas.css
+++ b/Proyectos/styles/viviendas.css
@@ -101,7 +101,7 @@ body{
 }
 .breadcrumb a{
     text-decoration: none;
-    /* color: #333; */
+    color: #FF0000;
     font-weight: 500;
 }
 .ficha_title{
